# bankstatementparser-loader-bai2

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  ARCHITECTURE.md  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MANIFEST.in  Makefile  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  docs.yml  nightly.yml  pr.yml  release.yml  security.yml
bankstatementparser_loader_bai2/: __init__.py  loader.py
docs/: Makefile  api.md  conf.py  index.md
examples/: 01_load_transactions.py  02_summarize_file.py  03_full_tour.py  README.md
scripts/: verify_versions.py
tests/: MUTATION.md  test_docs_accuracy.py  test_fixture_golden.py  test_loader.py  test_mutation_kills.py  test_real_fixtures_golden.py  test_regression_docs.py  test_regression_examples.py
tests/fixtures/: multi_group_multi_account.bai
tests/fixtures/real/: PROVENANCE.md
