[tool.poetry]
name = "bankstatementparser-loader-bai2"
version = "0.0.12"
description = "BAI2 (Bank Administration Institute v2) cash-management loader that parses BAI2 files into bankstatementparser Transaction objects."
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/bankstatementparser-loader-bai2"
homepage = "https://bankstatementparser.com"
keywords = ["bai2", "bank", "statement", "cash-management", "transactions"]
packages = [
    { include = "bankstatementparser_loader_bai2" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
bankstatementparser = ">=0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
pytest-cov = ">=6.0.0,<8.0.0"
black = "^26.3.1"
ruff = "^0.1.0"
mypy = "^1.11.0"
bandit = "^1.7.0"
interrogate = "^1.7.0"
mutmut = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = ["-ra", "--strict-markers", "--tb=short"]

[tool.coverage.run]
branch = true
source = ["bankstatementparser_loader_bai2"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "@overload",
]
fail_under = 100
show_missing = true
skip_covered = false

[tool.interrogate]
fail-under = 100
ignore-init-method = true
ignore-semiprivate = false
ignore-private = false
ignore-magic = true
exclude = ["tests", "examples"]

[tool.ruff]
line-length = 79
target-version = "py310"
extend-exclude = ["*.md", "tmp_env", ".venv", ".eggs"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
exclude = [
    "tmp_env/",
    ".venv/",
    ".eggs/",
]

[[tool.mypy.overrides]]
module = "bankstatementparser.*"
ignore_missing_imports = true

# Tests use pytest fixtures, subprocess plumbing, and dynamic exec of
# documented snippets; strict typing there is noise, not signal.
[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

# Mutation testing (mutmut 3.x). Mutate only the package source and run
# the test suite against each mutant; a surviving mutant means a
# behaviour the tests do not pin. ``also_copy`` brings the repo-root docs
# and examples into mutmut's sandbox copy so the docs / regression tests
# (which read README / CHANGELOG / examples) still run there. See
# tests/MUTATION.md for the score and any justified equivalent mutants.
[tool.mutmut]
source_paths = ["bankstatementparser_loader_bai2/"]
# Run mutation analysis against the behavioural tests that exercise the
# loader directly. The docs / regression suites assert documentation
# consistency and ``exec`` README code blocks in-process (which collides
# with mutmut's import trampoline), and they do not pin loader logic, so
# they are excluded from the mutant runs. See tests/MUTATION.md.
pytest_add_cli_args_test_selection = [
    "tests/test_loader.py",
    "tests/test_fixture_golden.py",
    "tests/test_real_fixtures_golden.py",
    "tests/test_mutation_kills.py",
]
